@@ -73,7 +73,7 @@ fi
 # ADD YOUR/CHANGE ADDITIONAL OPTIONS HERE
 #
 if [ -z "$JVM_OPTS" ] ; then
-    JVM_OPTS="-Xms1g -Xmx1g -server -XX:+AggressiveOpts"
+    JVM_OPTS="-Xms1g -Xmx1g -server -XX:+AggressiveOpts -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled"
 fi
 
 #
